--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#ff22223B</color>
-    <color name="grey">#ff4A4E69</color>
-    <color name="white">#ffF2E9E4</color>
+    <color name="og_black">#ff22223B</color>
+    <color name="og_grey">#ff4A4E69</color>
+    <color name="og_taupe">#ff9A8C98</color>
+    <color name="og_cream">#ffC9ADA7</color>
+    <color name="og_orange">#ffCD785B</color>
+    <color name="og_green">#ffA3B18A</color>
+    <color name="og_white">#ffF2E9E4</color>
+
+
 </resources>
