--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,13 +3,17 @@
     <style name="Base.Theme.Deadline_Countdown" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
 <!--         <item name="black">@color/my_light_primary</item>-->
+        <item name="android:statusBarColor" >@color/og_white</item>
     </style>
 
     <style name="Theme.Deadline_Countdown" parent="Base.Theme.Deadline_Countdown" />
 
     <style name="header">
-        <item name="textFillColor">@color/og_black</item>
-        <item name="backgroundColor">@color/og_white</item>
+        <item name="android:textColor">@color/og_black</item>
+<!--        <item name="android:background">@color/og_white</item>-->
+        <item name="android:fontFamily">@font/aladin_regular</item>
+        <item name="android:autoSizeTextType">uniform</item>
+        <item name="android:textSize">36sp</item>
     </style>
     
     
@@ -18,8 +22,9 @@
     </style>
 
     <style name="task">
-        <item name="textFillColor">@color/og_black</item>
-        <item name="fontFamily">@font/robotoslab_regular</item>
+        <item name="android:fontFamily">@font/robotoslab_regular</item>
+        <item name="android:background">@drawable/task_background</item>
+        <item name="android:layout_marginTop">16dp</item>
     </style>
 
     <style name="input">
