--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -24,16 +24,119 @@
     </androidx.appcompat.widget.Toolbar>
 
     <EditText
-        style="@style/inputs"
         android:id="@+id/settings_color_option"
+        style="@style/inputs"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Name your task..."
+        android:layout_height="48dp"
+        android:autofillHints=""
+        android:hint="Name your task..."
+        android:inputType="text"
         app:layout_constraintLeft_toRightOf="@id/left_guideline"
         app:layout_constraintRight_toLeftOf="@id/right_guideline"
         app:layout_constraintTop_toBottomOf="@id/top_guideline"
         />
 
+    <TextView
+        android:id="@+id/pick_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pick a color for it..."
+        android:layout_marginTop="30dp"
+        android:textColor="@color/og_cream"
+
+        app:layout_constraintTop_toBottomOf="@id/settings_color_option"
+        app:layout_constraintLeft_toRightOf="@id/left_text_guideline" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/color_layout"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="30dp"
+
+            app:layout_constraintTop_toBottomOf="@id/pick_color"
+            app:layout_constraintLeft_toRightOf="@id/left_guideline"
+            app:layout_constraintRight_toLeftOf="@id/right_guideline">
+            <ImageView
+                android:id="@+id/task_color_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/task_background"
+                android:backgroundTint="@color/og_grey"
+                android:contentDescription="TODO"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/left_guideline_2"
+                tools:ignore="MissingConstraints" />
+            <ImageView
+                android:id="@+id/task_color_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/task_background"
+                android:backgroundTint="@color/og_green"
+                android:contentDescription="TODO"
+                app:layout_constraintLeft_toRightOf="@id/left_guideline_2"
+                app:layout_constraintRight_toLeftOf="@id/central_guideline_"
+                tools:ignore="MissingConstraints" />
+            <ImageView
+                android:id="@+id/task_color_3"
+                android:layout_width="00dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/task_background"
+                android:backgroundTint="@color/og_white"
+                android:contentDescription="TODO"
+                app:layout_constraintLeft_toRightOf="@id/central_guideline_"
+                app:layout_constraintRight_toLeftOf="@id/right_guideline_2"
+                tools:ignore="MissingConstraints" />
+            <ImageView
+                android:id="@+id/task_color_4"
+                android:layout_width="00dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/task_background"
+                android:backgroundTint="@color/og_orange"
+                android:contentDescription="TODO"
+                app:layout_constraintLeft_toRightOf="@id/task_color_3"
+
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/right_guideline_2"
+                tools:ignore="MissingConstraints" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/left_guideline_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.25"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/central_guideline_"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="185dp" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/right_guideline_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.75"/>
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/which"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Which format do you want the countdown to be in..."
+        android:layout_marginTop="30dp"
+        android:textColor="@color/og_cream"
+        app:layout_constraintTop_toBottomOf="@id/color_layout"
+        app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
 
 
 
@@ -66,11 +169,21 @@
         app:layout_constraintGuide_percent="0.95"/>
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/left_text_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.07"/>
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.05"/>
+
+
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/right_guideline"
@@ -78,5 +191,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
