--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -11,7 +11,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/header"
         style="@style/header"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/left_guideline">
@@ -47,86 +47,65 @@
         app:layout_constraintTop_toBottomOf="@id/settings_color_option"
         app:layout_constraintLeft_toRightOf="@id/left_text_guideline" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/color_layout"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="30dp"
-
-            app:layout_constraintTop_toBottomOf="@id/pick_color"
-            app:layout_constraintLeft_toRightOf="@id/left_guideline"
-            app:layout_constraintRight_toLeftOf="@id/right_guideline">
-            <ImageView
-                android:id="@+id/task_color_1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/task_background"
-                android:backgroundTint="@color/og_grey"
-                android:contentDescription="TODO"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/left_guideline_2"
-                tools:ignore="MissingConstraints" />
-            <ImageView
-                android:id="@+id/task_color_2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/task_background"
-                android:backgroundTint="@color/og_green"
-                android:contentDescription="TODO"
-                app:layout_constraintLeft_toRightOf="@id/left_guideline_2"
-                app:layout_constraintRight_toLeftOf="@id/central_guideline_"
-                tools:ignore="MissingConstraints" />
-            <ImageView
-                android:id="@+id/task_color_3"
-                android:layout_width="00dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/task_background"
-                android:backgroundTint="@color/og_white"
-                android:contentDescription="TODO"
-                app:layout_constraintLeft_toRightOf="@id/central_guideline_"
-                app:layout_constraintRight_toLeftOf="@id/right_guideline_2"
-                tools:ignore="MissingConstraints" />
-            <ImageView
-                android:id="@+id/task_color_4"
-                android:layout_width="00dp"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:background="@drawable/task_background"
-                android:backgroundTint="@color/og_orange"
-                android:contentDescription="TODO"
-                app:layout_constraintLeft_toRightOf="@id/task_color_3"
-
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="@id/right_guideline_2"
-                tools:ignore="MissingConstraints" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/left_guideline_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.25"/>
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/central_guideline_"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="185dp" />
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/right_guideline_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.75"/>
 
 
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/color_layout"
+        android:layout_width="0dp"
+        android:layout_height="60sp"
+        android:layout_marginTop="15dp"
+
+        app:flexWrap="wrap"
+        app:alignItems="stretch"
+        app:alignContent="space_around"
+        app:justifyContent="space_between"
+
+        app:layout_constraintTop_toBottomOf="@id/pick_color"
+        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+        app:layout_constraintRight_toRightOf="@id/right_guideline">
+        <ImageView
+            android:id="@+id/task_color_1"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:background="@drawable/task_background"
+            android:backgroundTint="@color/og_grey"
+            android:contentDescription="TODO"
+
+            />
+        <ImageView
+            android:id="@+id/task_color_2"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:background="@drawable/task_background"
+            android:backgroundTint="@color/og_green"
+            android:contentDescription="TODO"
+
+            tools:ignore="MissingConstraints" />
+        <ImageView
+            android:id="@+id/task_color_3"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:background="@drawable/task_background"
+            android:backgroundTint="@color/og_white"
+            android:contentDescription="TODO"
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            tools:ignore="MissingConstraints" />
+        <ImageView
+            android:id="@+id/task_color_4"
+            android:layout_width="80sp"
+            android:layout_height="match_parent"
+            android:background="@drawable/task_background"
+            android:backgroundTint="@color/og_orange"
+            android:contentDescription="TODO"
+            app:layout_constraintLeft_toRightOf="@id/task_color_3"
+            tools:ignore="MissingConstraints"
+
+            />
+
+    </com.google.android.flexbox.FlexboxLayout>
+
+
 
     <TextView
         android:id="@+id/which"
@@ -138,7 +117,82 @@
         app:layout_constraintTop_toBottomOf="@id/color_layout"
         app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
 
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/pick_format"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
 
+        app:layout_constraintTop_toBottomOf="@+id/which"
+        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+        app:layout_constraintRight_toRightOf="@id/right_guideline"
+
+        app:flexWrap="wrap"
+        app:alignItems="stretch"
+        app:alignContent="space_around"
+        app:justifyContent="space_between"
+        >
+
+        <TextView
+            android:id="@+id/format_month"
+            style="@style/inputs"
+            android:textSize="12sp"
+            android:layout_width="55sp"
+            android:layout_height="40sp"
+            android:text="Month"
+            android:textAlignment="center"
+            />
+        <TextView
+            android:id="@+id/format_week"
+            style="@style/inputs"
+            android:textSize="12sp"
+            android:layout_width="55sp"
+            android:layout_height="40sp"
+            android:text="Week"
+            android:textAlignment="center"
+            />
+        <TextView
+            android:id="@+id/format_day"
+            style="@style/inputs"
+            android:textSize="12sp"
+            android:layout_width="55sp"
+            android:layout_height="40sp"
+            android:text="Day"
+            android:textAlignment="center"
+
+            />
+        <TextView
+            android:id="@+id/format_hour"
+            style="@style/inputs"
+            android:textSize="12sp"
+            android:layout_width="55sp"
+            android:layout_height="40sp"
+            android:text="Hour"
+            android:textAlignment="center"
+            />
+        <TextView
+        android:id="@+id/format_min"
+        style="@style/inputs"
+        android:textSize="12sp"
+        android:layout_width="55sp"
+        android:layout_height="40sp"
+        android:text="Min"
+            android:textAlignment="center"
+        />
+        <TextView
+            android:id="@+id/format_sec"
+            style="@style/inputs"
+            android:textSize="12sp"
+            android:layout_width="55sp"
+            android:layout_height="40sp"
+            android:text="Sec"
+            android:textAlignment="center"
+            />
+
+
+
+
+    </com.google.android.flexbox.FlexboxLayout>
 
 
 
