--- a/app/src/main/res/drawable/checkbox_unchecked_color.xml
+++ b/app/src/main/res/drawable/checkbox_unchecked_color.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp" android:color="@color/og_black"/>
+    <solid android:color="@android:color/transparent"/>
+    <stroke android:width="10dp" android:color="@color/og_black"/>
     <corners android:radius="@dimen/corner_radius"/>
 
 </shape>
