--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -40,8 +40,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pick a color for it..."
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:textColor="@color/og_cream"
+        android:fontFamily="@font/robotoslab_regular"
 
         app:layout_constraintTop_toBottomOf="@id/settings_color_option"
         app:layout_constraintLeft_toRightOf="@id/left_text_guideline" />
@@ -70,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
 
         app:layout_constraintTop_toBottomOf="@id/pick_color"
         app:layout_constraintBottom_toTopOf="@id/which"
@@ -83,7 +84,7 @@
             android:layout_width="80sp"
             android:layout_height="match_parent"
             android:contentDescription="TODO"
-            android:layout_marginRight="10sp"/>
+            android:layout_marginRight="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/task_color_2"
             android:layout_width="80sp"
@@ -92,7 +93,7 @@
             android:backgroundTint="@color/og_green"
             android:contentDescription="TODO"
             tools:ignore="MissingConstraints"
-            android:layout_marginRight="10sp"/>
+            android:layout_marginRight="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/task_color_3"
             style="@style/checkbox_color"
@@ -101,7 +102,7 @@
             android:backgroundTint="@color/og_white"
             android:contentDescription="TODO"
             tools:ignore="MissingConstraints"
-            android:layout_marginRight="10sp"/>
+            android:layout_marginRight="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/task_color_4"
             style="@style/checkbox_color"
@@ -126,8 +127,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose a format for the countdown..."
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:textColor="@color/og_cream"
+        android:fontFamily="@font/robotoslab_regular"
         app:layout_constraintTop_toBottomOf="@id/color_layout"
         app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
 
@@ -135,7 +137,7 @@
         android:id="@+id/pick_format"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
 
         app:layout_constraintTop_toBottomOf="@+id/which"
         app:layout_constraintLeft_toLeftOf="@id/left_guideline"
@@ -182,9 +184,65 @@
 
 <!--    =================================================== USER PICKS A DATE-->
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/date_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/date_time"
+        android:layout_marginTop="50sp"
+
+        android:text="Date"
+
+        app:layout_constraintTop_toBottomOf="@id/pick_format"
+        app:layout_constraintRight_toLeftOf="@id/time_button"
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+
+        />
 <!--    =================================================== USER PICKS A TIME-->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/time_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/date_time"
+        android:layout_marginTop="50sp"
+        android:textAllCaps="false"
+
+        android:text="Time"
+
+        app:layout_constraintTop_toBottomOf="@id/pick_format"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintLeft_toRightOf="@id/date_button"
+
+        />
 
 <!--    =================================================== USER ADDS AN OPTIONAL DESCRIPTION-->
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/task_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60sp"
+        android:textColorHint="@color/og_white"
+        android:hint="Description (optional)"
+        android:fontFamily="@font/robotoslab_light"
+
+        app:layout_constraintTop_toBottomOf="@id/time_button"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+        />
+
+<!--    =================================================== USER SAVES TASK-->
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        style="@style/save_button"
+        android:textAllCaps="false"
+        android:text="Save this task"
+
+
+        app:layout_constraintLeft_toRightOf="@id/left_guideline"
+        app:layout_constraintRight_toLeftOf="@id/right_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
+        />
 
 <!--    =================================================== GUIDELINES-->
 
