--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,11 +31,13 @@
 </style>
 
     <style name="options">
+        <item name="android:fontFamily">@font/robotoslab_regular</item>
         <item name="android:background">@drawable/setting_options_input_bg</item>
         <item name="android:textColor">@color/og_black</item>
     </style>
 
     <style name="inputs">
+        <item name="android:fontFamily">@font/robotoslab_regular</item>
         <item name="android:background">@drawable/setting_options_input_bg</item>
         <item name="android:textColor">@color/og_black</item>
         <item name="hintTextColor">@color/og_cream</item>
@@ -48,7 +50,9 @@
     </style>
 
     <style name="bottom_bar">
-        <item name="android:background">@drawable/menu_background</item>
+        <item name="android:fontFamily">@font/robotoslab_medium</item>
+        <item name="android:background">@android:color/transparent</item>
+<!--        <item name="android:background">@color/og_cream</item>-->
     </style>
 
     <style name="checkbox">
@@ -58,6 +62,7 @@
 <!--        android:button="@drawable/cb_show_hide_selector"-->
 <!--        android:textColor="@color/checkbox_text"-->
 <!--        android:text="this is a checkbox"-->
+        <item name="android:fontFamily">@font/robotoslab_medium</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">12sp</item>
         <item name="android:clickable">true</item>
@@ -68,10 +73,25 @@
     </style>
 
     <style name="checkbox_color">
+        <item name="android:fontFamily">@font/robotoslab_medium</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:button">@drawable/checkbox_selector_color</item>
         <item name="android:background">@drawable/checkbox_selector_color</item>
+    </style>
+
+    <style name="save_button">
+        <item name="android:background">@drawable/save_button_bg</item>
+        <item name="android:textColor">@color/og_white</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/robotoslab_medium</item>
+    </style>
+
+    <style name="date_time">
+        <item name="android:background">@drawable/date_time_buttons</item>
+        <item name="android:textColor">@color/og_white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/robotoslab_regular</item>
     </style>
 
 
