Add proper retrieving/loging of user inputs onsavebuttonclick specifically for title color and format of said task

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        app:labelVisibilityMode="unlabeled"
+
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
         app:menu="@menu/nav_bar_items"/>
