--- a/app/src/main/res/drawable/checkbox_checked_format.xml
+++ b/app/src/main/res/drawable/checkbox_checked_format.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/og_cream"/>
-    <stroke android:width="3dp" android:color="@color/og_black"/>
+    <solid android:color="@color/og_grey"/>
+    <stroke android:width="2dp" android:color="@color/og_cream"/>
     <corners android:radius="@dimen/corner_radius"/>
 
 </shape>
