--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -74,7 +74,6 @@
         android:layout_marginTop="20dp"
 
         app:layout_constraintTop_toBottomOf="@id/pick_color"
-        app:layout_constraintBottom_toTopOf="@id/which"
         app:layout_constraintLeft_toLeftOf="@id/left_guideline"
         app:layout_constraintRight_toLeftOf="@id/right_guideline">
         <androidx.appcompat.widget.AppCompatRadioButton
@@ -130,7 +129,7 @@
         android:layout_marginTop="40dp"
         android:textColor="@color/og_cream"
         android:fontFamily="@font/robotoslab_regular"
-        app:layout_constraintTop_toBottomOf="@id/color_layout"
+        app:layout_constraintTop_toBottomOf="@id/date_button"
         app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
 
     <com.google.android.flexbox.FlexboxLayout
@@ -193,7 +192,7 @@
 
         android:text="Date"
 
-        app:layout_constraintTop_toBottomOf="@id/pick_format"
+        app:layout_constraintTop_toBottomOf="@id/color_layout"
         app:layout_constraintRight_toLeftOf="@id/time_button"
         app:layout_constraintLeft_toRightOf="@id/left_guideline"
 
@@ -209,7 +208,7 @@
 
         android:text="Time"
 
-        app:layout_constraintTop_toBottomOf="@id/pick_format"
+        app:layout_constraintTop_toBottomOf="@id/color_layout"
         app:layout_constraintRight_toLeftOf="@id/right_guideline"
         app:layout_constraintLeft_toRightOf="@id/date_button"
 
@@ -225,7 +224,7 @@
         android:hint="Description (optional)"
         android:fontFamily="@font/robotoslab_light"
 
-        app:layout_constraintTop_toBottomOf="@id/time_button"
+        app:layout_constraintTop_toBottomOf="@id/pick_format"
         app:layout_constraintRight_toLeftOf="@id/right_guideline"
         app:layout_constraintLeft_toRightOf="@id/left_guideline"
         />
