--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/header"
         style="@style/header"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +43,6 @@
         android:layout_height="wrap_content"
 
         app:labelVisibilityMode="unlabeled"
-
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
