--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -11,7 +11,8 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/header"
         style="@style/header"
-        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/left_guideline">
@@ -28,6 +29,7 @@
         style="@style/inputs"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginTop="10dp"
         android:autofillHints=""
         android:hint="Name your task..."
         android:inputType="text"
@@ -77,7 +79,7 @@
         app:layout_constraintLeft_toLeftOf="@id/left_guideline"
         app:layout_constraintRight_toLeftOf="@id/right_guideline">
         <androidx.appcompat.widget.AppCompatRadioButton
-            android:id="@+id/task_color_1"
+            android:id="@+id/og_cream"
             android:backgroundTint="@color/og_cream"
             style="@style/checkbox_color"
             android:layout_width="80sp"
@@ -85,7 +87,7 @@
             android:contentDescription="TODO"
             android:layout_marginRight="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
-            android:id="@+id/task_color_2"
+            android:id="@+id/og_green"
             android:layout_width="80sp"
             android:layout_height="match_parent"
             style="@style/checkbox_color"
@@ -94,7 +96,7 @@
             tools:ignore="MissingConstraints"
             android:layout_marginRight="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
-            android:id="@+id/task_color_3"
+            android:id="@+id/og_white"
             style="@style/checkbox_color"
             android:layout_width="80sp"
             android:layout_height="match_parent"
@@ -103,13 +105,12 @@
             tools:ignore="MissingConstraints"
             android:layout_marginRight="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
-            android:id="@+id/task_color_4"
+            android:id="@+id/og_orange"
             style="@style/checkbox_color"
             android:layout_width="80sp"
             android:layout_height="match_parent"
             android:contentDescription="TODO"
             android:backgroundTint="@color/og_orange"
-            app:layout_constraintLeft_toRightOf="@id/task_color_3"
             tools:ignore="MissingConstraints"
             />
 
@@ -150,32 +151,32 @@
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/format_week"
             style="@style/checkbox"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="40sp"
             android:text="Week" />
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/format_day"
             style="@style/checkbox"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="40sp"
             android:text="Day" />
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/format_hour"
             style="@style/checkbox"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="40sp"
             android:text="Hour"/>
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/format_min"
             style="@style/checkbox"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="40sp"
             android:text="Min" />
         <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/format_sec"
             style="@style/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="40sp"
+            android:layout_width="60dp"
+            android:layout_height="48sp"
             android:text="Sec" />
     </com.google.android.flexbox.FlexboxLayout>
 
