--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,7 +27,7 @@
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:elevation">10dp</item>
         <item name="android:padding">5dp</item>
-<!--        <item name="android:backgroundTint">@color/og_orange</item>-->
+<!--        <item name="android:backgroundTint">@color/og_white</item>-->
 </style>
 
     <style name="options">
