--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -36,21 +36,14 @@
         app:layout_constraintTop_toBottomOf="@id/item_title"
         />
 
-    <Button
+    <ImageButton
         android:id="@+id/item_del_button"
         style="@style/save_button"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_margin="0dp"
-
-        android:tint="@color/og_black"
         android:drawableTint="@color/og_black"
-        android:textColor="@color/og_black"
         android:background="@drawable/delete_outline_24"
-        android:backgroundTint="@color/og_black"
-        android:backgroundTintMode="multiply"
-        android:foregroundTint="@color/og_black"
-
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
 
