--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditActivity"
-    android:background="@color/og_taupe">
+    android:background="@drawable/og_background">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/header"
@@ -33,17 +33,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
             <ImageButton
-                android:id="@+id/delete_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:scaleType="fitXY"
-                android:background="@null"
-                android:src="@drawable/delete_outline_24"
-                android:contentDescription="Delete"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/item_del_button"
+                style="@style/save_button"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:layout_margin="0dp"
+                android:drawableTint="@color/og_black"
+                android:background="@drawable/delete_outline_24"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -58,6 +59,7 @@
         android:autofillHints=""
         android:inputType="text"
         android:text=""
+        android:hint="@string/name_your_task"
         app:layout_constraintLeft_toRightOf="@id/left_guideline"
         app:layout_constraintRight_toLeftOf="@id/right_guideline"
         app:layout_constraintTop_toBottomOf="@id/top_guideline" />
@@ -68,7 +70,7 @@
         android:layout_height="wrap_content"
         android:text="@string/pick_a_color_for_it"
         android:layout_marginTop="40dp"
-        android:textColor="@color/og_cream"
+        android:textColor="@color/og_grey"
         android:fontFamily="@font/robotoslab_regular"
 
         app:layout_constraintTop_toBottomOf="@id/settings_color_option"
@@ -93,7 +95,7 @@
             style="@style/checkbox_color"
             android:layout_width="80sp"
             android:layout_height="match_parent"
-            android:layout_marginRight="15sp"/>
+            android:layout_marginEnd="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/og_green"
             android:layout_width="80sp"
@@ -101,7 +103,7 @@
             style="@style/checkbox_color"
             android:backgroundTint="@color/og_green"
             tools:ignore="MissingConstraints"
-            android:layout_marginRight="15sp"/>
+            android:layout_marginEnd="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/og_white"
             style="@style/checkbox_color"
@@ -109,7 +111,7 @@
             android:layout_height="match_parent"
             android:backgroundTint="@color/og_white"
             tools:ignore="MissingConstraints"
-            android:layout_marginRight="15sp"/>
+            android:layout_marginEnd="15sp"/>
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/og_orange"
             style="@style/checkbox_color"
@@ -128,7 +130,7 @@
         android:layout_height="wrap_content"
         android:text="@string/choose_a_format_for_the_countdown"
         android:layout_marginTop="40dp"
-        android:textColor="@color/og_cream"
+        android:textColor="@color/og_grey"
         android:fontFamily="@font/robotoslab_regular"
         app:layout_constraintTop_toBottomOf="@id/date_button"
         app:layout_constraintLeft_toLeftOf="@id/left_text_guideline"/>
